--- a/Degree360/templates/Degree360/FeedbackProvider.html
+++ b/Degree360/templates/Degree360/FeedbackProvider.html
@@ -3,3 +3,7 @@
 	{{ form.as_p }}
 	<button type="submit" class="save btn btn-default">Save</button>
 </form>
+
+<div>
+	<a href="{% url 'Degree360:requestFeedback' pk %}">Go to Degree360:requestFeedback?</a>
+</div>
