Added link from requestFeedback to feedbackProvider

--- a/Degree360/templates/Degree360/requestFeedback.html
+++ b/Degree360/templates/Degree360/requestFeedback.html
@@ -6,8 +6,8 @@
 	Users selected to provide feedbacks:
 	</em>
     <ul>
-    {% for feedbackProvider in feedbackProviders %}
-        <p>{{ feedbackProvider.name }}</p>
+    {% for feedbackProvider in feedbackProviders %}	
+        <li><a href="{% url 'Degree360:feedbackProvider' feedbackProvider.survey.id feedbackProvider.email %}">{{ feedbackProvider.name }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
