--- a/Degree360/templates/Degree360/FeedbackProvider.html
+++ b/Degree360/templates/Degree360/FeedbackProvider.html
@@ -1,5 +1,5 @@
 <h1>Edit information about feedback provider.</h1>
-<form method="POST" class="post-form">{% csrf_token %}
+<form method="POST" class="post-form" action="{% url 'Degree360:requestFeedback' pk %}">{% csrf_token %}
 	{{ form.as_p }}
 	<button type="submit" class="save btn btn-default">Save</button>
 </form>
